--- a/TeamCode_Project1.ipynb
+++ b/TeamCode_Project1.ipynb
@@ -24,6 +24,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "print(\"Doing data stuff here!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#Angela's code ends"
    ]
   },
