--- a/TeamCode_Project1.ipynb
+++ b/TeamCode_Project1.ipynb
@@ -34,7 +34,8 @@
    "outputs": [],
    "source": [
     "#Nabeel's code starts\n",
-    "# my code starts here"
+    "# my code starts here\n",
+    "print('my code starts here')"
    ]
   },
   {
@@ -44,7 +45,8 @@
    "outputs": [],
    "source": [
     "#Nabeel's code ends\n",
-    "# my code ends here"
+    "# my code ends here\n",
+    "print('my code ends here')"
    ]
   },
   {
@@ -82,7 +84,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
